--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -14,6 +14,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:itemCount="10" />
+        tools:itemCount="10"
+        tools:listitem="@layout/tourlist_item"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
