--- a/app/src/main/res/layout/tourlist_item.xml
+++ b/app/src/main/res/layout/tourlist_item.xml
@@ -17,13 +17,17 @@
         app:layout_constraintStart_toEndOf="@+id/list_image"
         app:layout_constraintTop_toTopOf="@+id/list_image" />
 
+        <!--
+        android:src="@tools:sample/avatars"
+        -->
+
     <ImageView
         android:id="@+id/list_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:scaleType="centerCrop"
-        android:src="@tools:sample/avatars"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="h,1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
