--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.taipeitour.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_languages"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_languages"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="100"
+        android:title="@string/action_about"
         app:showAsAction="never" />
 </menu>
