--- a/app/src/main/res/navigation/nav_tour_graph.xml
+++ b/app/src/main/res/navigation/nav_tour_graph.xml
@@ -7,7 +7,7 @@
     <fragment
         android:id="@+id/listFragment"
         android:name="com.example.taipeitour.ListFragment"
-        android:label="ListFragment" >
+        android:label="Taipei Tour">
         <action
             android:id="@+id/action_listFragment_to_detailFragment"
             app:destination="@id/detailFragment"
@@ -40,9 +40,15 @@
     <fragment
         android:id="@+id/webViewFragment"
         android:name="com.example.taipeitour.WebViewFragment"
-        android:label="WebViewFragment" >
+        android:label="{title}" >
         <action
             android:id="@+id/action_webViewFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
+        <argument
+            android:name="url"
+            app:argType="string" />
+        <argument
+            android:name="title"
+            app:argType="string" />
     </fragment>
 </navigation>
