--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -8,6 +8,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/detail_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_marginBottom="30dp" />
+
         <com.google.android.material.textview.MaterialTextView
             style="@style/TextAppearance.Material3.HeadlineSmall"
             android:id="@+id/detail_address"
